syntax = "proto3";

package pb;

option go_package = "github.com/ellemouton/playgrounds/grpcerrors/pb";

service Errors {
  rpc NoError(Empty) returns (Empty);
  rpc StatusOk(Empty) returns (Empty);
  rpc StatusError(Empty) returns (Empty);
  rpc StatusErrorWithDetails(Empty) returns (Empty);
  rpc NonStatusError(Empty) returns (Empty);
  rpc StreamNoError(Empty) returns (stream StreamItem);
  rpc StreamNonStatusError(Empty) returns (stream StreamItem);
  rpc StreamStatusError(Empty) returns (stream StreamItem);
}

message Empty {}

message StreamItem { string item = 1; }

message Error {
  oneof error {
    ErrRuleViolation rule_violation_err = 1;
    ErrInternal internal_err = 2;
  }
}

message ErrRuleViolation {
  string rule_name = 1;
  string err = 2;
}

message ErrInternal { string msg = 1; }
